client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: client-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: client
    template:
        metadata:
            labels:
                component: client
        spec:
            containers:
                -   name: client
                    image: uqyanzie/wit-todo-fe
                    ports:
                        -   containerPort: 3000
