api-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: api-cluster-ip-service
spec:
    type: NodePort
    selector:
        component: api
    ports:
         -   port: 8000
             targetPort: 8000
