client-cluster-ip-deployment.yaml
apiVersion: v1
kind: Service
metadata:
    name: client-cluster-ip-service
spec:
    type: NodePort
    selector:
        component: client
    ports:
    -   port: 3000
        targetPort: 80
        nodePort: 30008
